--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "unibest",
-  "appid": "__UNI__D1E5001",
+  "appid": "__UNI__C592085",
   "description": "",
   "versionName": "1.0.0",
   "versionCode": "100",
@@ -83,7 +83,7 @@
   },
   "quickapp": {},
   "mp-weixin": {
-    "appid": "wxa2abb91f64032a2b",
+    "appid": "wx6c1f47735b97557e",
     "setting": {
       "urlCheck": false,
       "es6": true,
