--- a/env/.env
+++ b/env/.env
@@ -9,7 +9,8 @@ VITE_WX_APPID = 'wx6c1f47735b97557e'
 VITE_APP_PUBLIC_BASE=/
 
 # 后台请求地址
-VITE_SERVER_BASEURL = 'https://ukw0y1.laf.run'
+VITE_SERVER_BASEURL = 'http://192.168.0.68:5005'
+
 # 后台上传地址
 VITE_UPLOAD_BASEURL = 'https://ukw0y1.laf.run/upload'
 
