节气改为每日宜忌中的第一个

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "alova": "^3.3.3",
     "dayjs": "1.11.10",
     "js-cookie": "^3.0.5",
+    "lunar-javascript": "^1.7.4",
     "pinia": "2.0.36",
     "pinia-plugin-persistedstate": "3.2.1",
     "sm-crypto": "^0.3.13",
