refactor: 将图片路径别名从@img改为/static
统一图片资源引用路径，将原有的@img别名替换为直接使用/static路径，便于维护和理解

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "Node",
     "paths": {
       "@/*": ["./src/*"],
-      "@img/*": ["./src/static/*"]
+      "/static/*": ["./src/static/*"]
     },
     "resolveJsonModule": true,
     "types": [
