feat(客服系统): 新增客服聊天功能及相关页面
- 添加腾讯云 TUIKit 和 RoomKit 依赖
- 实现客服聊天、会话列表和消息服务页面
- 配置路由和页面权限
- 优化用户设置页面中的客服入口
- 移除平台条件编译注释以支持全平台

--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-4070620250821001",
     "@tanstack/vue-query": "^5.62.16",
     "@tencentcloud/chat-uikit-uniapp": "^2.5.5",
+    "@tencentcloud/roomkit-web-vue3": "^3.2.0",
     "abortcontroller-polyfill": "^1.7.8",
     "alova": "^3.3.3",
     "dayjs": "1.11.10",
