--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
     "@uni-helper/vite-plugin-uni-components": "0.2.0",
     "@uni-helper/vite-plugin-uni-layouts": "0.1.11",
     "@uni-helper/vite-plugin-uni-manifest": "^0.2.8",
-    "@uni-helper/vite-plugin-uni-pages": "^0.3.8",
+    "@uni-helper/vite-plugin-uni-pages": "0.3.20",
     "@uni-helper/vite-plugin-uni-platform": "^0.0.5",
     "@uni-ku/bundle-optimizer": "^1.3.3",
     "@uni-ku/root": "^1.3.4",
