build: 更新依赖配置以修复 unconfig 版本冲突
添加 pnpm 和 npm 的 overrides 配置，确保 unconfig 使用指定版本 7.3.2

--- a/package.json
+++ b/package.json
@@ -181,8 +181,17 @@
     "vite-plugin-restart": "^1.0.0",
     "vue-tsc": "^3.0.6"
   },
+  "pnpm": {
+    "overrides": {
+      "unconfig": "7.3.2"
+    }
+  },
+  "overrides": {
+    "unconfig": "7.3.2"
+  },
   "resolutions": {
-    "bin-wrapper": "npm:bin-wrapper-china"
+    "bin-wrapper": "npm:bin-wrapper-china",
+    "unconfig": "7.3.2"
   },
   "lint-staged": {
     "*": "eslint --fix"
