--- a/.github/workflows/deploy-h5.yml
+++ b/.github/workflows/deploy-h5.yml
@@ -29,9 +29,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: pnpm
       - name: Install dependencies
-        run: pnpm i --no-lockfile
+        run: pnpm i
       - name: Build
         run: pnpm build:h5
       - name: Upload artifact
