chore: 更新H5部署的基础路径为/guohao/

--- a/env/.env
+++ b/env/.env
@@ -6,7 +6,7 @@ VITE_WX_APPID = 'wx6c1f47735b97557e'
 
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
 # https://uniapp.dcloud.net.cn/collocation/manifest.html#h5-router
-VITE_APP_PUBLIC_BASE=/
+VITE_APP_PUBLIC_BASE=/guohao/
 
 # 后台请求地址
 VITE_SERVER_BASEURL = 'http://120.55.52.235:5005'
